--- a/public/css/login-styles.css
+++ b/public/css/login-styles.css
@@ -17,8 +17,12 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
     gap: 2rem;
+    flex-wrap: wrap;
 }
+
+
 
 .relogin-container div img{
     width: 6rem;
