--- a/views/venta-agregar.pug
+++ b/views/venta-agregar.pug
@@ -1,10 +1,10 @@
 include menu
-main.form-main
+main.form-main.ventas-main
     div.form-header
         h1 Registra Una Nueva Venta 
         a(href="/venta-listado") Listado de Ventas 
 
-    div
+    div.producto-container
         h2 Productos 
         div.table-container.tabla-producto
             table
@@ -66,7 +66,7 @@ main.form-main
                 tbody 
         h2 Total: $0
         div.submit-venta-container
-            form(action="")
+            form.registrar-form(action="")
                 input.secreto(type="text", hidden)
                 input.submit-venta(type="submit", value="Registrar Venta")
 
